--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css">
 
   <!-- Favicon and other icons (made with http://www.favicon-generator.org/) -->
+	<link rel="icon" href="{{ "assets/icons/icon.png" | prepend: site.baseurl }}" type="image/x-icon">
   <!--
   <link rel="shortcut icon" href="{{ "assets/icons/favicon.ico" | prepend: site.baseurl }}" type="image/x-icon">
 	<link rel="icon" href="{{ "assets/icons/favicon.ico" | prepend: site.baseurl }}" type="image/x-icon">
