--- a/_layouts/page1.html
+++ b/_layouts/page1.html
@@ -1,12 +1,10 @@
 ---
 layout: default
 ---
-
+<div class="wrapper">
 <div class="page">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
+  
 
   {% include page_divider.html %}
 
@@ -14,4 +12,5 @@ layout: default
     {{ content }}
   </article>
 
+</div>
 </div>
